src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
  .smooth-animation {
    transition: 0.5s ease-in-out;
  }

  .gradient-hover {
    position: relative;
    overflow: hidden;
  }

  .gradient-hover::before {
    content: "";
    position: absolute;
    top: 0;
    left: -100%;
    width: 200%;
    height: 100%;
    background: linear-gradient(to right,
        rgba(0, 123, 255, 0) 0,
        rgba(0, 128, 255, 0.5) 50%,
        rgba(0, 123, 255, 0) 100%);
    transition: 0.5s;
    opacity: 0;
  }

  .gradient-hover:hover::before {
    left: 100%;
    opacity: 1;
  }

  .placeholder-white::placeholder {
    color: #fff;
    opacity: 0.9;
  }

  .placeholder-white::-ms-input-placeholder {
    color: #fff;
    opacity: 0.9;
  }

  .typing-cursor {
    display: inline-block;
    width: 2px;
    height: 1em;
    color: #ff890a;
    margin-left: 10px;
  }

  .typing-cursor.blinking {
    animation: 0.7s step-end 5 blink;
  }

  @keyframes blink {

    from,
    to {
      opacity: 1;
    }

    50% {
      opacity: 0;
    }
  }

  .underline-animation {
    position: relative;
    display: inline-block;
  }

  .underline-animation::after {
    content: "";
    position: absolute;
    width: 100%;
    transform: scaleX(0);
    height: 2px;
    bottom: 0;
    left: 0;
    background-color: #ff890a;
    transform-origin: bottom right;
    transition: transform 0.5s ease-out;
  }

  .underline-animation:hover::after {
    transform: scaleX(1);
    transform-origin: bottom left;
  }
}

body {
  background: #020202;
  color: #fff;
  -ms-overflow-style: none;
  scrollbar-width: 0px;
}

body::-webkit-scrollbar {
  display: none;
}

.underline-container {
  @apply relative;
}

.underline-container::after {
  content: "";
  @apply absolute bottom-[-20px] left-0 w-full h-[10px] bg-[#0070e0] transition-all duration-500 ease-in-out;
}

.underline-container:hover::after {
  height: 20px;
}

.animate-pulse {
  animation: 0.5s pulse;
}

.animate-fade {
  animation: 0.5s fade;
}

@keyframes pulse {

  0%,
  100% {
    transform: scale(1);
  }

  50% {
    transform: scale(1.1);
  }
}

@keyframes fade {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

input[type="number"]::-webkit-outer-spin-button,
input[type="number"]::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

input[type="number"] {
  -moz-appearance: textfield;
  appearance: textfield;
}

html.lenis,
html.lenis body {
  height: auto;
}

.lensi.lenis-smooth {
  scroll-behavior: auto !important;
}

.lenis.lenis-smooth [data-lenis-prevent] {
  overscroll-behavior: contain;
}

.lenis.lenis-stopped {
  overflow: hidden;
}

.lenis.lenis-smooth iframe {
  pointer-events: none;
}

.radial-bg {
  background: radial-gradient(circle at 30% 20%,
      rgba(61, 119, 255, 0.35),
      rgba(0, 0, 0, 0.2),
      rgba(0, 0, 0, 0),
      transparent 1000px),
    radial-gradient(circle at 70% 40%,
      rgba(61, 119, 255, 0.35),
      rgba(0, 0, 0, 0.2),
      rgba(0, 0, 0, 0),
      transparent 1000px),
    radial-gradient(circle at 30% 60%,
      rgba(61, 119, 255, 0.35),
      rgba(0, 0, 0, 0.2),
      rgba(0, 0, 0, 0),
      transparent 1000px);
  background-size: cover;
}

.large-radial-bg {
  background: radial-gradient(circle at 30% 55%,
      rgba(61, 119, 255, 0.35),
      rgba(0, 0, 0, 0.2),
      transparent 1500px);
  background-size: cover;
}

.multiple-large-radial-bg {
  background: radial-gradient(circle at 10% 50%,
      rgba(61, 119, 255, 0.35),
      rgba(0, 0, 0, 0.2),
      transparent 1500px),
    radial-gradient(circle at 90% 50%,
      rgba(255, 81, 61, 0.35),
      rgba(0, 0, 0),
      transparent 2000px);
  background-size: cover;
}

.vignette::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: radial-gradient(circle,
      rgba(0, 0, 0, 0) 40%,
      rgba(0, 0, 0, 0.5) 100%);
  z-index: 20;
}

.reverse-vignette::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: radial-gradient(circle,
      rgba(0, 0, 0, 0) 40%,
      rgba(0, 0, 0, 0) 100%);
  z-index: 21;
}

.dark-radial {
  background: radial-gradient(circle at 50% 50%,
      rgba(18, 18, 18, 1),
      rgba(37, 37, 37, 0.5));
}

.hexagon {
  clip-path: polygon(50% 5%, 92% 25%, 92% 75%, 50% 95%, 8% 75%, 8% 25%);
}

